Fixed bug with preloader where full-scale image would create horizontal scrollbar when resized. Also adjusted comments.

--- a/app/styles/less/components/preloader.less
+++ b/app/styles/less/components/preloader.less
@@ -2,11 +2,13 @@ div.loader
 {
     .transition(all 300ms ease-out);
 
+    height: 100%;
     opacity: 1;
     position: absolute;
         top: 0;
-        left: 50%;
+        left: 0;
         z-index: 1;
+    width: 100%;
 
     &.complete
     {
