--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1234,11 +1234,13 @@ div.loader {
   -ms-transition: all 300ms ease-out;
   -o-transition: all 300ms ease-out;
   transition: all 300ms ease-out;
+  height: 100%;
   opacity: 1;
   position: absolute;
   top: 0;
-  left: 50%;
+  left: 0;
   z-index: 1;
+  width: 100%;
   /*
     .spinner::after
     {
